// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled 1`] = `
.c2 {
  font-size: 8px;
  line-height: 100%;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.75px;
  -moz-letter-spacing: 0.75px;
  -ms-letter-spacing: 0.75px;
  letter-spacing: 0.75px;
  margin: 0;
  padding: 0;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
  color: #636768;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 4px;
}

.c3 {
  font-size: 16px;
  line-height: 20px;
  background: #FFFFFF;
  border: 2px solid #D2D2D2;
  box-sizing: border-box;
  border-radius: 8px;
  width: 100%;
  padding: 16px;
  color: #112035;
  resize: both;
  cursor: not-allowed;
  opacity: 0.5;
  border-color: #D2D2D2;
  outline: none;
}

.c3:hover,
.c3:focus,
.c3:focus-visible {
  border-color: #b9b9b9;
}

@media (min-width:768px) {
  .c2 {
    font-size: 10px;
  }
}

<div
  class="c0"
  direction="column"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="subtext"
      cursor="inherit"
      for="textarea_id"
      title=""
    >
      Textarea label
    </label>
  </div>
  <div
    class="c0"
    direction="column"
  >
    <textarea
      class="c3"
      disabled=""
      id="textarea_id"
      placeholder="Placeholder text!"
      rows="4"
    />
  </div>
</div>
`;

exports[`renders 1`] = `
.c2 {
  font-size: 8px;
  line-height: 100%;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.75px;
  -moz-letter-spacing: 0.75px;
  -ms-letter-spacing: 0.75px;
  letter-spacing: 0.75px;
  margin: 0;
  padding: 0;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
  color: #636768;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 4px;
}

.c3 {
  font-size: 16px;
  line-height: 20px;
  background: #FFFFFF;
  border: 2px solid #D2D2D2;
  box-sizing: border-box;
  border-radius: 8px;
  width: 100%;
  padding: 16px;
  color: #112035;
  resize: both;
  cursor: text;
  opacity: 1;
  border-color: #D2D2D2;
  outline: none;
}

.c3:hover,
.c3:focus,
.c3:focus-visible {
  border-color: #b9b9b9;
}

@media (min-width:768px) {
  .c2 {
    font-size: 10px;
  }
}

<div
  class="c0 Textarea"
  direction="column"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="subtext"
      cursor="inherit"
      for="textarea_id"
      title=""
    >
      Textarea label
    </label>
  </div>
  <div
    class="c0"
    direction="column"
  >
    <textarea
      class="c3"
      id="textarea_id"
      placeholder="Placeholder text!"
      rows="4"
    />
  </div>
</div>
`;

exports[`renders with error 1`] = `
.c2 {
  font-size: 8px;
  line-height: 100%;
  font-weight: 700;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.75px;
  -moz-letter-spacing: 0.75px;
  -ms-letter-spacing: 0.75px;
  letter-spacing: 0.75px;
  margin: 0;
  padding: 0;
  text-align: left;
  cursor: inherit;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
  color: #636768;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 4px;
}

.c3 {
  font-size: 16px;
  line-height: 20px;
  background: #FFFFFF;
  border: 2px solid #D2D2D2;
  box-sizing: border-box;
  border-radius: 8px;
  width: 100%;
  padding: 16px;
  color: #112035;
  resize: both;
  cursor: text;
  opacity: 1;
  border-color: #D82C2C;
  outline: none;
}

.c3:hover,
.c3:focus,
.c3:focus-visible {
  border-color: #D82C2C;
}

.c4 {
  margin-top: 7px;
  font-size: 12px;
  color: #D82C2C;
}

@media (min-width:768px) {
  .c2 {
    font-size: 10px;
  }
}

<div
  class="c0"
  direction="column"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="subtext"
      cursor="inherit"
      for="textarea_id"
      title=""
    >
      Textarea label
    </label>
  </div>
  <div
    class="c0"
    direction="column"
  >
    <textarea
      class="c3"
      id="textarea_id"
      placeholder="Placeholder text!"
      rows="4"
    />
  </div>
  <span
    class="c4"
  >
    Something really quite terrible has gone wrong here!
  </span>
</div>
`;
